tests/lean/attrCmd.lean.expected.out
attrCmd.lean:6:0-6:6: error: failed to synthesize instance
  Pure M
